--- a/css/buyinglist.css
+++ b/css/buyinglist.css
@@ -10,20 +10,20 @@
     width: 100px;
     display: block;
     margin: 0 auto;
-    padding-top: 20px;
+    padding-top: 40px;
 }
 .buyinglisttop h3{
-    text-align-last: center;
+    text-align: center;
     padding-top: 30px;
     font-size: 36px;
     color: #B69452;
+    font-weight: bold;
 }
 /* ========主區塊======== */
 .buyinglistmain{
     display: block;
     width: 75%;
     margin: 0 auto;
-    margin-bottom: 120px;
     padding-bottom: 90px;
     border-top:2px solid #B69452;
     border-bottom:2px solid #B69452;
@@ -32,10 +32,10 @@
 /* ========清單內容======== */
 .list{
     width: 100%;
-    margin-top: 20px;
-    padding: 20px;
+    max-width:1200px;
+    margin: 20px auto 0;
+    padding: 10px;
     box-sizing: border-box;
-    position: relative;
     margin-bottom: 40px;
 }
 .list div{
@@ -67,25 +67,39 @@
     margin-left: 3%;
     margin-top: 20px;
     padding-bottom: 30px;
-    border-bottom: 1px solid #cacaca;
 }
 .list div:nth-of-type(2) p{
     font-size: 20px;
     line-height: 2;
 }
-.list > h3{
+.list h3{
     font-size: 20px;
-    position: absolute;
-    top:70%;
-    left:80%;
+    text-align: right;
+    padding-top: 20px;
+    border-top: 1px solid #cacaca;
+}
+/* ========清單內容 RWD======== */
+@media screen and (max-width:991.98px){
+    .list div:first-child{
+        display:block;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .list div:nth-of-type(2){
+        width: 100%;
+        margin-left: 3%;
+        margin-top: 20px;
+        padding-bottom: 30px;
+    }
 }
 /* ========總計========== */
 .listtotal{
     display: flex;
     width: 30%;
+    min-width: 200px;
     vertical-align :text-top;
     justify-content: space-between;
-    padding:20px;  
+    padding:20px 40px;  
     background-color: #cacaca;
     color: #141414;  
     border-radius: 20px;
@@ -101,6 +115,12 @@
 .listtotal p{
     font-size: 32px;
 }
+/* ========總計 RWD========== */
+@media screen and (max-width:991.98px){
+    .listtotal{
+        bottom: -2%;
+    }
+}
 /* ========底下按鈕======== */
 .buyinglistbtn{
     display: flex;
@@ -108,74 +128,40 @@
     margin: 0 auto;
     justify-content: space-between;
 }
-.buyinglistbtn1{
+.buyinglistbtn a{
     color: #cacaca;
-    background-image: url(../img/d_btn.png);
+    background-color: #141414;
     display:block;
-    width: 230px;
-    height: 60px;
-    background-size: cover;
+    width: 40%;
+    max-width: 250px;
+    height: 30px;
+    line-height: 30px;
+    padding: 10px;
     text-decoration: none;
     font-size: 20px;
-    padding-left:100px;
-    box-sizing: border-box;
-    position: relative;
-}
-.buyinglistbtn1 p{
-    background-color: #1d1d1d;
-    display: inline-block;
-    width: 80px;
-    padding:0 15px 0 5px;
-    margin-left: 15px;
-    margin-top:20px;
+    text-align: center;
+    border-radius: 555px;
+    margin-top: 100px;
     transition:all .5s;
+    font-weight: bold;
 }
-.buyinglistbtn1 span {
-    position: absolute;
-    top:30px;
-    right:-10px;
-    width: 0px;
-    border-bottom:2px solid #B69452;
-    transition:all .5s;
-}
-.buyinglistbtn1:hover p{
-    transform: translateX(-40px); 
-}
-.buyinglistbtn1:hover span{
-    width:40px; 
+.buyinglistbtn a:hover{
+    background-color: #B69452;
+    color: #141414;
 }
 
-.buyinglistbtn2{
-    color: #cacaca;
-    background-image: url(../img/b_btn.png);
-    display:block;
-    width: 220px;
-    height: 60px;
-    background-size: cover;
-    text-decoration: none;
-    font-size: 20px;
-    position: relative;
+@media screen and (min-width:1600px){
+    .buyinglistbtn a{
+        margin: 20px 5vw 0;
+    }
 }
-.buyinglistbtn2 p{
-    background-color: #1d1d1d;
-    display: inline-block;
-    width: 80px;
-    padding:0 15px 0 5px;
-    margin-left: 15px;
-    margin-top:20px;
-    transition:all .5s;
-}
-.buyinglistbtn2 span {
-    position: absolute;
-    top:30px;
-    left:-10px;
-    width:0px;
-    border-bottom:2px solid #B69452;
-    transition:all .5s;
-}
-.buyinglistbtn2:hover p{
-    transform: translateX(40px); 
-}
-.buyinglistbtn2:hover span{
-    width:40px; 
+@media screen and (max-width:575.98px){
+    .buyinglistbtn{
+        display: block;
+        padding-top: 50px;
+    }
+    .buyinglistbtn a{
+        min-width: 160px;
+        margin: 30px auto 0;
+    }
 }
