--- a/css/about.css
+++ b/css/about.css
@@ -27,6 +27,7 @@
 }
 .abouttop p{
     font-size: 2vw;
+    font-size: max(2vw, 12px);
     color:#141414;
     margin: 20px auto 0 auto;
     text-decoration:underline
@@ -74,12 +75,16 @@
     display: block;
     width: 25vw;
     font-size: 32px;
+    font-size:5vw;
+    font-size: min(max(5vw, 20px), 32px);
     text-align: center;
     padding: 6vw 0 1vw 0;
     line-height: 4vw;
 }
 .aboutone div >p{
     font-size: 16px;
+    font-size: 3vw;
+    font-size: min(max(3vw, 13px), 16px);
     margin: 2vw 5vw;
 }
 .aboutone a{
@@ -116,10 +121,6 @@
         font-size: 3.8vw;
         font-size: max(3.8vw, 18px);
         line-height: max(4vw, 20px);
-    }
-    .aboutone div >p{
-        font-size: 3vw;
-        font-size: max(3vw, 13px);
     }
     .aboutone a{
         top:60vw;
@@ -213,6 +214,8 @@
     display: block;
     width: 25vw;
     font-size: 32px;
+    font-size:5vw;
+    font-size: min(max(5vw, 20px), 32px);
     text-align: center;
     margin-left: 40vw;
     padding: 6vw 0 1vw 0;
@@ -220,6 +223,8 @@
 }
 .abouttwo div >p{
     font-size: 16px;
+    font-size: 3vw;
+    font-size: min(max(3vw, 13px), 16px);
     margin: 2vw 5vw;
 }
 .abouttwo a{
@@ -260,13 +265,10 @@
         font-size: max(3.8vw, 18px);
         line-height: max(4vw, 20px);
     }
-    .abouttwo div >p{
-        font-size: 2vw;
-        font-size: max(3vw, 13px);
-    }
     .abouttwo a{
         top:60vw;
         right:14vw;
+        font-size: min(4vw, 20px);
     }
 }
 /* ======第二區塊a hover&RWD====== */
