--- a/css/all.css
+++ b/css/all.css
@@ -213,7 +213,8 @@ body{
 }
 .gotoshop h2{
     font-size: 4vw;
-    font-size: max(4vw, 20px);
+    font-size:  min(max(4vw,20px), 32px);
+    
     margin-bottom: 5vh;
     font-weight: bold;
 }
@@ -253,11 +254,15 @@ body{
 }
 .gotoshopitem h3{
     font-size: 24px;
+    font-size: 3vw;
+    font-size: min(max(3vw, 16px), 20px);
     font-weight: bold;
     margin-bottom:10%;
 }
 .gotoshopitem p{
-    font-size: 12px;
+    font-size: 14px;
+    font-size: 2vw;
+    font-size: min(max(2vw, 14px), 16px);
     line-height: 1.2;
     display: block;
     padding-left: 10%;
@@ -276,14 +281,10 @@ body{
         width: 100%;
     }
     .gotoshopitem h3{
-        font-size: 3vw;
-        font-size: max(3vw, 14px);
         margin-bottom:0;
     }
     .gotoshopitem p{
         padding-top: 5%;
-        font-size: 1.5vw;
-        font-size: max(1.5vw, 12px);
         padding-left: 0;
     }
     .gotoshopitem p:last-child{
@@ -380,7 +381,8 @@ body{
     padding-top: 20px;
 }
 .bottom h2{
-    font-size: 32px;
+    font-size:4vw;
+    font-size: min(max(4vw, 20px), 32px);
     text-align: center;
     margin:30px auto;
 }
@@ -404,12 +406,16 @@ body{
 .bottom li p{
     margin:0 auto;
     font-size: 16px;
+    font-size: 3vw;
+    font-size: min(max(3vw, 12px), 16px);
     line-height: 1.6;
 }
 .bottom li p:nth-child(-n+2){
     color:#B69452;
     text-align: center;
     font-size: 18px;
+    font-size:3.2vw;
+    font-size: min(max(3.2vw, 14px), 18px);
     margin-bottom:20px;
     font-weight: bold;      
 }
@@ -463,22 +469,6 @@ body{
     font-size: 12px;
     text-align: center;
     margin-top: 30px;
-}
-/* ========底端footer RWD======== */
-@media screen and (max-width: 992px)  {
-    .bottom h2{
-        font-size:4vw;
-        font-size: max(4vw, 20px)
-    }
-    .bottom li p{
-        font-size: 3vw;
-        font-size: max(3vw, 12px);
-        line-height: 1.6;
-    }
-    .bottom li p:nth-child(-n+2){
-        font-size:3.2vw;
-        font-size: max(3.2vw, 14px)
-    }
 }
 
 /* ========登入視窗======== */
@@ -647,5 +637,27 @@ body{
         margin: 0 5%;
         width: 80px;
     }
-
+}
+/* ========loadin page======== */
+.loadingblock{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #292929;
+    z-index: 100;
+}
+.loadingblock img{
+    display: block;
+    width: 20vw;
+    margin: 0 auto;
+    padding: 20vh 0 0 5vw;
+    opacity: .6;
+}
+.loadingblock p{
+    font-weight: bold;
+    font-size: 3vw;
+    text-align: center;
+    opacity: .5;
 }
