--- a/css/all.css
+++ b/css/all.css
@@ -58,6 +58,8 @@ body{
     line-height: 50px;
     transition:.5s;
     margin-right: 10vw;
+    text-decoration: none;
+    position: relative;
 }
 /* ========nav選單hover======== */
 .head ul li a:before{
@@ -660,4 +662,21 @@ body{
     font-size: 3vw;
     text-align: center;
     opacity: .5;
+}
+/* ======購物車點點====== */
+
+.buyingdot{
+    background-color: #b67c0a;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 1;
+    display: block;
+    width: 12px;
+    padding:3px;
+    text-align: center;
+    border-radius: 555px;
+    position: absolute;
+    bottom: 6px;
+    right: 0;
+
 }
