--- a/css/all.css
+++ b/css/all.css
@@ -678,5 +678,16 @@ body{
     position: absolute;
     bottom: 6px;
     right: 0;
-
+    animation:dotmove .5s;
+    display: none;
 }
+@keyframes dotmove {
+    0%{
+        transform: scale(1);
+    }50%{
+        transform: scale(1.2);
+    }100%{
+        transform: scale(1);
+    }
+}
+
