--- a/css/buyinglist.css
+++ b/css/buyinglist.css
@@ -118,7 +118,7 @@
     font-weight: bold;
     position: absolute;
     left: 50%;
-    bottom: -5%;
+    bottom: 0;
     transform: translate(-50%);
 }
 .listtotal h3{
@@ -130,7 +130,7 @@
 /* ========總計 RWD========== */
 @media screen and (max-width:991.98px){
     .listtotal{
-        bottom: -2%;
+        /* bottom: -2%; */
     }
 }
 /* ========底下按鈕======== */
