--- a/css/buyinglist.css
+++ b/css/buyinglist.css
@@ -130,44 +130,23 @@
 /* ========底下按鈕======== */
 .buyinglistbtn{
     display: flex;
-    width: 75%;
+    width: 100%;
     margin: 0 auto;
     justify-content: space-between;
+    flex-wrap: nowrap;
 }
 .buyinglistbtn a{
     color: #cacaca;
-    background-color: #141414;
-    display:block;
-    width: 40%;
-    max-width: 250px;
-    height: 30px;
-    line-height: 30px;
-    padding: 10px;
+    width: 50%;
     text-decoration: none;
     font-size: 20px;
     text-align: center;
-    border-radius: 555px;
     margin-top: 100px;
     transition:all .5s;
     font-weight: bold;
 }
 .buyinglistbtn a:hover{
-    background-color: #B69452;
-    color: #141414;
+    color: #B69452;
 }
 
-@media screen and (min-width:1600px){
-    .buyinglistbtn a{
-        margin: 20px 5vw 0;
-    }
-}
-@media screen and (max-width:575.98px){
-    .buyinglistbtn{
-        display: block;
-        padding-top: 50px;
-    }
-    .buyinglistbtn a{
-        min-width: 160px;
-        margin: 30px auto 0;
-    }
-}
+
