--- a/css/oneproduct.css
+++ b/css/oneproduct.css
@@ -128,7 +128,6 @@
 }
 .productone h3:nth-of-type(3){
     margin-left: 8vw;
-    line-height: 1.5;
 }
 .productone img:nth-of-type(3){
     width: 40%;
@@ -143,6 +142,7 @@
 .producttwo {
     display: flex;
     position: relative;
+    margin-bottom: 20%;
 }
 .producttwo img{
     width: 60vw;
@@ -200,7 +200,7 @@
     width: 44vw;
     height: 36vw;
     border-radius: 50%;
-    box-shadow: 0 0 30px 60px #424242 inset;
+    box-shadow: 0 0 30px 60px #141414 inset;
     position: absolute;
     top:0;
     left: 6vw;    
